# CPP_template

./: .gitignore  CMakeLists.txt  Makefile  format.sh  main.cpp
include/: hello.h
src/: hello.cpp
test/: hello_test.cpp
